# iiko-api

./: .gitignore  README.md  pyproject.toml
src/iiko_api/: __init__.py  exceptions.py  iiko_api.py
src/iiko_api/core/: base_client.py
src/iiko_api/core/config/: logging_config.py
src/iiko_api/endpoints/: __init__.py  assembly_charts.py  dishes.py  employees.py  nomenclature.py  olap.py  orders.py  references.py  reports.py  stores.py
src/iiko_api/models/: __init__.py  models.py
src/iiko_api/services/: price_order.py
tests/: __init__.py  conftest.py  test_exceptions.py  test_nomenclature_endpoint.py  test_orders_endpoint.py
