[project]
name = "iiko-api"
version = "0.10.0"
description = "Библиотека для работы с iiko api"
readme = "README.md"
authors = [
    { name = "Garik", email = "khvatik.igor@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ruff>=0.11.0",
    "xmltodict>=0.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
