[project]
name = "iiko-api"
version = "0.10.1"
description = "Библиотека для работы с iiko api"
readme = "README.md"
authors = [
    { name = "Garik", email = "khvatik.igor@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "xmltodict>=0.14.2",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by line-length)
]

[tool.ruff.lint.isort]
known-first-party = ["iiko_api"]
